Restructure data as json, include perspective

--- a/data/data_processing.ipynb
+++ b/data/data_processing.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,11 +257,11 @@
     "Given a path to a .csv file, this function will read the file and format it as a dicionary with the following structure:\n",
     "    \n",
     "    {\n",
-    "        'Inputs': np.array([message1, message2, ...]),\n",
-    "        'Labels': np.array([label1, label2, ...])\n",
+    "        'Inputs': [message1, message2, ...],\n",
+    "        'Labels': [label1, label2, ...]\n",
     "    }\n",
     "    \n",
-    "    where 'Inputs' is an array of lists of message dictionaries that conform to the input to OpenAI's Chat Completion API,\n",
+    "    where 'Inputs' is a list of lists of message dictionaries that conform to the input to OpenAI's Chat Completion API,\n",
     "    and 'Labels' is a list of labels for each message. Each label is a string that represents the type of extremist content of the message.\n",
     "\n",
     "    Each message should have the following format:\n",
@@ -276,7 +276,7 @@
     "        }\n",
     "    ]\n",
     "\"\"\"\n",
-    "def format_eval_data(path, system_message):\n",
+    "def format_eval_openai(path, system_message):\n",
     "    df = pd.read_csv(path)\n",
     "    inputs = []\n",
     "    labels = []\n",
@@ -294,14 +294,58 @@
     "        ])\n",
     "        labels.append(row['Label'])\n",
     "    return {\n",
-    "        'Inputs': np.array(inputs),\n",
-    "        'Labels': np.array(labels)\n",
+    "        'Inputs': inputs,\n",
+    "        'Labels': labels\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Given a path to a .csv file, this function will read the file and format it as a dicionary with the following structure:\n",
+    "        \n",
+    "        {\n",
+    "            'Inputs': [request1, request2, ...]),\n",
+    "            'Labels': [label1, label2, ...]\n",
+    "        }\n",
+    "        \n",
+    "        where 'Inputs' is a list of request dictionaries that conform to the input to Perspective's comments().analyze API,\n",
+    "        and 'Labels' is a list of labels for each message. Each label is a string that represents the type of extremist content of the message.\n",
+    "    \n",
+    "        Each request will have the following format:\n",
+    "        {\n",
+    "            'comment': { 'text': 'tweet text' },\n",
+    "            'requestedAttributes': metrics\n",
+    "        }\n",
+    "\n",
+    "Args:\n",
+    "    path: The path to the .csv file\n",
+    "    metrics: A dictionary of the metrics to request from the Perspective API (example: {'TOXICITY': {}, 'SEVERE_TOXICITY': {}})\n",
+    "\"\"\"\n",
+    "def format_eval_perspective(path, metrics):\n",
+    "    df = pd.read_csv(path)\n",
+    "    inputs = []\n",
+    "    labels = []\n",
+    "    for index, row in df.iterrows():\n",
+    "        tweet_text = row['Text']\n",
+    "        inputs.append({\n",
+    "            'comment': { 'text': tweet_text },\n",
+    "            'requestedAttributes': metrics\n",
+    "        })\n",
+    "        labels.append(row['Label'])\n",
+    "    return {\n",
+    "        'Inputs': inputs,\n",
+    "        'Labels': labels\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -324,86 +368,112 @@
     "\n",
     "print(system_message)\n",
     "\n",
-    "ISIS_dict = format_eval_data('Seed_MIWS/Seed_Dataset/ISIS_Seed_Complete.csv', system_message)\n",
-    "WS_dict = format_eval_data('Seed_MIWS/Seed_Dataset/WS_Seed_Complete.csv', system_message)"
+    "ISIS_dict_openai = format_eval_openai('Seed_MIWS/Seed_Dataset/ISIS_Seed_Complete.csv', system_message)\n",
+    "WS_dict_openai = format_eval_openai('Seed_MIWS/Seed_Dataset/WS_Seed_Complete.csv', system_message)\n",
+    "\n",
+    "metrics = {'IDENTITY_ATTACK': {}, 'SEVERE_TOXICITY': {}, 'THREAT': {}}\n",
+    "ISIS_dict_perspective = format_eval_perspective('Seed_MIWS/Seed_Dataset/ISIS_Seed_Complete.csv', metrics)\n",
+    "WS_dict_perspective = format_eval_perspective('Seed_MIWS/Seed_Dataset/WS_Seed_Complete.csv', metrics)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_dict = {\n",
-    "    'Inputs': np.concatenate((ISIS_dict['Inputs'], WS_dict['Inputs'])),\n",
-    "    'Labels': np.concatenate((ISIS_dict['Labels'], WS_dict['Labels']))\n",
+    "combined_dict_openai = {\n",
+    "    'Inputs': ISIS_dict_openai['Inputs'] + WS_dict_openai['Inputs'],\n",
+    "    'Labels': ISIS_dict_openai['Labels'] + WS_dict_openai['Labels']\n",
+    "}\n",
+    "\n",
+    "combined_dict_perspective = {\n",
+    "    'Inputs': ISIS_dict_perspective['Inputs'] + WS_dict_perspective['Inputs'],\n",
+    "    'Labels': ISIS_dict_perspective['Labels'] + WS_dict_perspective['Labels']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combined dictionary:\n",
-      "Inputs shape: (398, 2)\n",
-      "Labels shape: (398,)\n"
+      "Combined openAI dictionary:\n",
+      "Inputs shape: 398\n",
+      "Labels shape: 398\n",
+      "\n",
+      "Combined Perspective dictionary:\n",
+      "Inputs shape: 398\n",
+      "Labels shape: 398\n"
      ]
     }
    ],
    "source": [
-    "print(\"Combined dictionary:\")\n",
-    "print(f\"Inputs shape: {combined_dict['Inputs'].shape}\")\n",
-    "print(f\"Labels shape: {combined_dict['Labels'].shape}\")"
+    "print(\"Combined openAI dictionary:\")\n",
+    "print(f\"Inputs shape: {len(combined_dict_openai['Inputs'])}\")\n",
+    "print(f\"Labels shape: {len(combined_dict_openai['Labels'])}\")\n",
+    "\n",
+    "print(\"\")\n",
+    "\n",
+    "print(\"Combined Perspective dictionary:\")\n",
+    "print(f\"Inputs shape: {len(combined_dict_perspective['Inputs'])}\")\n",
+    "print(f\"Labels shape: {len(combined_dict_perspective['Labels'])}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the combined dictionary to a new .pkl file at the specified path\n",
-    "import pickle\n",
-    "output_path = 'eval_data.pkl'\n",
+    "# Save the combined dictionary to a new .json file at the specified path\n",
+    "import json\n",
+    "json_file_openai = json.dumps(combined_dict_openai, indent=4)\n",
+    "json_file_perspective = json.dumps(combined_dict_perspective, indent=4)\n",
     "\n",
-    "with open(output_path, 'wb') as f:\n",
-    "    pickle.dump(combined_dict, f)"
+    "with open(\"eval_data_openai.json\", \"w\") as file:\n",
+    "    file.write(json_file_openai)\n",
+    "\n",
+    "with open(\"eval_data_perspective.json\", \"w\") as file:\n",
+    "    file.write(json_file_perspective)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test that the file was saved correctly by loading it back in and comparing the loaded data to the original data\n",
-    "with open(output_path, 'rb') as f:\n",
-    "    loaded_data = pickle.load(f)\n",
-    "\n",
-    "assert np.array_equal(combined_dict['Inputs'], loaded_data['Inputs'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'role': 'system', 'content': 'You are on a social media platform\\'s moderation team. Your task is to decide whether the following tweet contains extremist content or not.\\nExtremist content includes messages that are considered to be propoganda, radicalization, or recruitment. Please label the tweet as \\'Propoganda\\', \\'Radicalization\\', \\'Recruitment\\', or \\'None\\'.\\nYour output must be in JSON format and with the following structure:\\n{\"Label\": \"Propoganda\" or \"Radicalization\" or \"Recruitment\" or \"None\"}'}\n",
-      " {'role': 'user', 'content': 'Coalition planes massacred these children in airstrikes\\nOn #Hit ,#Anbar\\nhttp://t.co/yCsEgkwDY6#Iraq'}]\n"
+      "[{'role': 'system', 'content': 'You are on a social media platform\\'s moderation team. Your task is to decide whether the following tweet contains extremist content or not.\\nExtremist content includes messages that are considered to be propoganda, radicalization, or recruitment. Please label the tweet as \\'Propoganda\\', \\'Radicalization\\', \\'Recruitment\\', or \\'None\\'.\\nYour output must be in JSON format and with the following structure:\\n{\"Label\": \"Propoganda\" or \"Radicalization\" or \"Recruitment\" or \"None\"}'}, {'role': 'user', 'content': 'Coalition planes massacred these children in airstrikes\\nOn #Hit ,#Anbar\\nhttp://t.co/yCsEgkwDY6#Iraq'}]\n"
      ]
     }
    ],
    "source": [
-    "print(combined_dict['Inputs'][0])"
+    "print(combined_dict_openai['Inputs'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'comment': {'text': 'Coalition planes massacred these children in airstrikes\\nOn #Hit ,#Anbar\\nhttp://t.co/yCsEgkwDY6#Iraq'}, 'requestedAttributes': {'IDENTITY_ATTACK': {}, 'SEVERE_TOXICITY': {}, 'THREAT': {}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(combined_dict_perspective['Inputs'][0])"
    ]
   },
   {
