Incorporate benign, non-extremist tweets

--- a/data/data_processing.ipynb
+++ b/data/data_processing.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,11 +276,13 @@
     "        }\n",
     "    ]\n",
     "\"\"\"\n",
-    "def format_eval_openai(path, system_message):\n",
-    "    df = pd.read_csv(path)\n",
+    "def format_eval_openai(path, system_message, labels_present=True, limit=None):\n",
+    "    df = pd.read_csv(path, encoding='latin-1')\n",
     "    inputs = []\n",
     "    labels = []\n",
     "    for index, row in df.iterrows():\n",
+    "        if limit and index >= limit:\n",
+    "            break\n",
     "        tweet_text = row['Text']\n",
     "        inputs.append([\n",
     "            {\n",
@@ -292,7 +294,10 @@
     "                'content': tweet_text\n",
     "            }\n",
     "        ])\n",
-    "        labels.append(row['Label'])\n",
+    "        if labels_present:\n",
+    "            labels.append(row['Label'])\n",
+    "        else:\n",
+    "            labels.append(\"None\")\n",
     "    return {\n",
     "        'Inputs': inputs,\n",
     "        'Labels': labels\n",
@@ -301,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,17 +331,22 @@
     "    path: The path to the .csv file\n",
     "    metrics: A dictionary of the metrics to request from the Perspective API (example: {'TOXICITY': {}, 'SEVERE_TOXICITY': {}})\n",
     "\"\"\"\n",
-    "def format_eval_perspective(path, metrics):\n",
-    "    df = pd.read_csv(path)\n",
+    "def format_eval_perspective(path, metrics, labels_present=True, limit=None):\n",
+    "    df = pd.read_csv(path, encoding='latin-1')\n",
     "    inputs = []\n",
     "    labels = []\n",
     "    for index, row in df.iterrows():\n",
+    "        if limit and index >= limit:\n",
+    "            break\n",
     "        tweet_text = row['Text']\n",
     "        inputs.append({\n",
     "            'comment': { 'text': tweet_text },\n",
     "            'requestedAttributes': metrics\n",
     "        })\n",
-    "        labels.append(row['Label'])\n",
+    "        if labels_present:\n",
+    "            labels.append(row['Label'])\n",
+    "        else:\n",
+    "            labels.append(\"None\")\n",
     "    return {\n",
     "        'Inputs': inputs,\n",
     "        'Labels': labels\n",
@@ -345,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -370,32 +380,34 @@
     "\n",
     "ISIS_dict_openai = format_eval_openai('Seed_MIWS/Seed_Dataset/ISIS_Seed_Complete.csv', system_message)\n",
     "WS_dict_openai = format_eval_openai('Seed_MIWS/Seed_Dataset/WS_Seed_Complete.csv', system_message)\n",
+    "tweets_dict_openai = format_eval_openai(\"tweets.csv\", system_message, labels_present=False, limit=1000)\n",
     "\n",
     "metrics = {'IDENTITY_ATTACK': {}, 'SEVERE_TOXICITY': {}, 'THREAT': {}}\n",
     "ISIS_dict_perspective = format_eval_perspective('Seed_MIWS/Seed_Dataset/ISIS_Seed_Complete.csv', metrics)\n",
-    "WS_dict_perspective = format_eval_perspective('Seed_MIWS/Seed_Dataset/WS_Seed_Complete.csv', metrics)"
+    "WS_dict_perspective = format_eval_perspective('Seed_MIWS/Seed_Dataset/WS_Seed_Complete.csv', metrics)\n",
+    "tweets_dict_perspective = format_eval_openai(\"tweets.csv\", metrics, labels_present=False, limit=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "combined_dict_openai = {\n",
-    "    'Inputs': ISIS_dict_openai['Inputs'] + WS_dict_openai['Inputs'],\n",
-    "    'Labels': ISIS_dict_openai['Labels'] + WS_dict_openai['Labels']\n",
+    "    'Inputs': ISIS_dict_openai['Inputs'] + WS_dict_openai['Inputs'] + tweets_dict_openai['Inputs'],\n",
+    "    'Labels': ISIS_dict_openai['Labels'] + WS_dict_openai['Labels'] + tweets_dict_openai['Labels']\n",
     "}\n",
     "\n",
     "combined_dict_perspective = {\n",
-    "    'Inputs': ISIS_dict_perspective['Inputs'] + WS_dict_perspective['Inputs'],\n",
-    "    'Labels': ISIS_dict_perspective['Labels'] + WS_dict_perspective['Labels']\n",
+    "    'Inputs': ISIS_dict_perspective['Inputs'] + WS_dict_perspective['Inputs'] + tweets_dict_perspective['Inputs'],\n",
+    "    'Labels': ISIS_dict_perspective['Labels'] + WS_dict_perspective['Labels'] + tweets_dict_perspective['Labels']\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -403,12 +415,12 @@
      "output_type": "stream",
      "text": [
       "Combined openAI dictionary:\n",
-      "Inputs shape: 398\n",
-      "Labels shape: 398\n",
+      "Inputs shape: 1398\n",
+      "Labels shape: 1398\n",
       "\n",
       "Combined Perspective dictionary:\n",
-      "Inputs shape: 398\n",
-      "Labels shape: 398\n"
+      "Inputs shape: 1398\n",
+      "Labels shape: 1398\n"
      ]
     }
    ],
@@ -426,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
