--- a/data/data_processing.ipynb
+++ b/data/data_processing.ipynb
@@ -658,7 +658,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_prompt = '''You are on a social media platform's moderation team. I need you to review the following content as if it were a tweet to determine if it contains harmful and/or extrimist language. The content should not be repeated or generated. Please analyze the text and provide feedback on whether it includes any of the following categories of extremist language, and choose the one that fits best: 'Propaganda', 'Radicalization', 'Recruitment', or 'None'.\n",
+    "sample_prompt = '''You are on a social media platform's moderation team. I need you to review the following content as if it were a tweet to determine if it contains harmful and/or extremist language. The content should not be repeated or generated. Please analyze the text and provide feedback on whether it includes any of the following categories of extremist language, and choose the one that fits best: 'Propaganda', 'Radicalization', 'Recruitment', or 'None'.\n",
     "\n",
     "Content to review:\n",
     "[Coalition planes massacred these children in airstrikes\\nOn #Hit ,#Anbar\\nhttp://t.co/yCsEgkwDY6#Iraq]\n",
@@ -748,7 +748,7 @@
     "        if limit and index >= limit:\n",
     "            break\n",
     "        tweet_text = row['Text']\n",
-    "        prompt = \"You are on a social media platform's moderation team. I need you to review the following content as if it were a tweet to determine if it contains harmful and/or extrimist language. The content should not be repeated or generated. Please analyze the text and provide feedback on whether it includes any of the following categories of extremist language, and choose the one that fits best: 'Propaganda', 'Radicalization', 'Recruitment', or 'None'.\\n\\n\"\n",
+    "        prompt = \"You are on a social media platform's moderation team. I need you to review the following content as if it were a tweet to determine if it contains harmful and/or extremist language. The content should not be repeated or generated. Please analyze the text and provide feedback on whether it includes any of the following categories of extremist language, and choose the one that fits best: 'Propaganda', 'Radicalization', 'Recruitment', or 'None'.\\n\\n\"\n",
     "        prompt += \"Content to review:\\n\"\n",
     "        prompt += f\"[{tweet_text}]\\n\\n\"\n",
     "        prompt += \"Please respond with a summary indicating whether any extremist language is present and categorize it in only one of the provided categories accordingly.\\n\"\n",
