GPT predictions and stats recorded

--- a/data/data_processing.ipynb
+++ b/data/data_processing.ipynb
@@ -2317,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2444,6 +2444,113 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GPT: Confusion Matrix / Performance Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPT Stats:\n",
+      "{'tp': 273, 'tn': 1000, 'fp': 0, 'fn': 125, 'predicted_no': 1125, 'predicted_yes': 273, 'actual_no': 1000, 'actual_yes': 398, 'accuracy': 0.9105865522174535, 'misclassification_rate': 0.08941344778254649, 'true_pos_rate': 0.6859296482412061, 'false_pos_rate': 0.0, 'true_neg_rate': 1.0, 'precision': 1.0, 'prevalence': 0.28469241773962806, 'null_error_rate': 0.7153075822603719, 'f1': 0.8137108792846498}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "data_file = open('eval_data_openai.json')\n",
+    "dataset = json.load(data_file)\n",
+    "data_file.close()\n",
+    "\n",
+    "output_file = open('predictions_gpt.json')\n",
+    "predicted = json.load(output_file)\n",
+    "output_file.close()\n",
+    "\n",
+    "original_total = len(dataset['Inputs'])\n",
+    "n = 0 # number of tweets that were able to be classified without being blocked by safety filters - \n",
+    "true_pos = []\n",
+    "true_neg = []\n",
+    "false_pos = []\n",
+    "false_neg = []\n",
+    "for i in range(len(dataset['Labels'])):\n",
+    "    # Not terrorist\n",
+    "    if 'Label' not in predicted['predictions'][i]:\n",
+    "        continue\n",
+    "    if predicted['predictions'][i]['Label'] == 'None' and dataset['Labels'][i] == 'None':\n",
+    "        true_neg.append(i)\n",
+    "    elif predicted['predictions'][i]['Label'] != 'None' and dataset['Labels'][i] != 'None':\n",
+    "        true_pos.append(i)\n",
+    "    elif predicted['predictions'][i]['Label'] != 'None' and dataset['Labels'][i] == 'None':\n",
+    "        false_pos.append(i)\n",
+    "    elif predicted['predictions'][i]['Label'] == 'None' and dataset['Labels'][i] != 'None':\n",
+    "        false_neg.append(i)\n",
+    "    n += 1\n",
+    "    \n",
+    "tp = len(true_pos)\n",
+    "tn = len(true_neg)\n",
+    "fp = len(false_pos)\n",
+    "fn = len(false_neg)\n",
+    "predicted_no = tn+fn\n",
+    "predicted_yes = tp+fp\n",
+    "actual_no = tn+fp\n",
+    "actual_yes = fn+tp\n",
+    "accuracy = (tn+tp)/n\n",
+    "misclassification_rate = (fp+fn)/n # aka error rate\n",
+    "# assert 1-accuracy == misclassification_rate\n",
+    "true_pos_rate = tp / actual_yes # aka sensitivity or recall\n",
+    "false_pos_rate = 0 if actual_no == 0 else fp / actual_no \n",
+    "true_neg_rate = 0 if actual_no == 0 else tn / actual_no\n",
+    "# assert 1-true_neg_rate == false_pos_rate\n",
+    "precision = tp / predicted_yes\n",
+    "prevalence = actual_yes / n\n",
+    "null_error_rate = actual_no / n\n",
+    "f1 = (2*tp) / (2*tp + fp + fn) # harmonic mean of precision and recall\n",
+    "\n",
+    "gpt_stats = {\n",
+    "    \"tp\": tp,\n",
+    "    \"tn\": tn,\n",
+    "    \"fp\": fp,\n",
+    "    \"fn\": fn,\n",
+    "    \"predicted_no\": predicted_no,\n",
+    "    \"predicted_yes\": predicted_yes,\n",
+    "    \"actual_no\": actual_no,\n",
+    "    \"actual_yes\": actual_yes,\n",
+    "    \"accuracy\": accuracy,\n",
+    "    \"misclassification_rate\": misclassification_rate,\n",
+    "    \"true_pos_rate\": true_pos_rate,\n",
+    "    \"false_pos_rate\": false_pos_rate,\n",
+    "    \"true_neg_rate\": true_neg_rate,\n",
+    "    \"precision\": precision,\n",
+    "    \"prevalence\": prevalence,\n",
+    "    \"null_error_rate\": null_error_rate,\n",
+    "    \"f1\": f1\n",
+    "}\n",
+    "print(\"GPT Stats:\")\n",
+    "print(gpt_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_file_stats_gpt = json.dumps({\"gpt_stats\": gpt_stats}, indent=4)\n",
+    "\n",
+    "with open(\"stats_gpt.json\", \"w\") as file:\n",
+    "    file.write(json_file_stats_gpt)"
+   ]
   }
  ],
  "metadata": {
@@ -2462,7 +2569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
